# take_home_execise

./: README.md
part-1-platform/: README.md
part-1-platform/app/: Dockerfile  go.mod  main.go
part-1-platform/ci/.github/workflows/: ci-cd.yaml
part-1-platform/docs/: architecture.md
part-1-platform/infra/helm/golden-path/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
part-1-platform/infra/helm/golden-path/templates/: _helpers.tpl  deployment.yaml  external-secret.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
part-1-platform/infra/terraform/: main.tf  outputs.tf  variables.tf
part-1-platform/scripts/: verify-teardown.sh
part-2-system-design/: README.md  architecture.md
part-3-python-cli/: README.md  pyproject.toml
part-3-python-cli/appreg/: __init__.py  cli.py  models.py  registry.py
part-3-python-cli/sample-data/: example-apps.yaml
part-3-python-cli/tests/: test_registry.py
